--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet"href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-	<!------Header Section------>
+	<!------Header Section----->
 	<header>
 		<a href="#" class="logo">Devlo<span>pe</span>r..</a>
 		<ul class="navlist">
